--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Calculator</title>
-  <link href="C:\Users\HP\Downloads\Tugas Javascript\style.css" rel="stylesheet">
+  <link href="https://github.com/EgaPramudya/Calculator-Ega/blob/main/style.css" rel="stylesheet">
   <script src="C:\Users\HP\Downloads\Tugas Javascript\script.js" defer></script>
 </head>
 <body>
