--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Calculator</title>
   <link href="https://github.com/EgaPramudya/Calculator-Ega/blob/main/style.css" rel="stylesheet">
-  <script src="C:\Users\HP\Downloads\Tugas Javascript\script.js" defer></script>
+  <script src="https://github.com/EgaPramudya/Calculator-Ega/blob/main/script.js" defer></script>
 </head>
 <body>
   <div class="calculator-grid">
